--- a/index.tml
+++ b/index.tml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <titl=e>Futsal: História e Mais</title>
+    <titl=e>Basquete: Surgimento e Mais</title>
     <link rel="stylesheet" href="index.css"
 </head>
 <body>
@@ -36,29 +36,27 @@
         <section>
             <h3>Surgimento</h3>
             <p>
-                Na década de 1930, em solo uruguaio, uma semente foi plantada, germinando para se tornar uma paixão global: o futsal. Juan Carlos Ceriani, um visionário apaixonado pelo futebol, concebeu a ideia de um jogo dinâmico, adaptado para ser jogado em espaços reduzidos, nas quadras cobertas da América do Sul. Essa visão inovadora deu origem ao futebol de salão, precursor do que hoje conhecemos como futsal.
+                O ano era 1891, e Naismith enfrentava o desafio de criar um jogo que fosse menos áspero do que o futebol e o rugby, mas que ainda exigisse habilidade atlética. Ele fixou uma cesta de pêssegos a uma altura de 3,05 metros em cada extremidade do ginásio da YMCA em Springfield, Massachusetts. O objetivo era simples: arremessar uma bola de futebol em direção à cesta do time adversário.
 
-A essência do futsal nasceu da necessidade de proporcionar aos jogadores uma versão do futebol que pudesse ser praticada em ambientes urbanos, onde as dimensões reduzidas não limitassem a intensidade e a emoção do jogo. Ceriani, ao elaborar as primeiras regras, definiu um esporte jogado em quadras menores, com times formados por cinco jogadores, incluindo o goleiro.
+No dia 21 de dezembro de 1891, o primeiro jogo de basquete foi disputado com nove jogadores de cada lado. A novidade se espalhou rapidamente, conquistando popularidade em escolas e universidades nos Estados Unidos. A adoção de regras padronizadas e a formação da Associação Nacional de Basquete (NBA) em 1946 contribuíram significativamente para a consolidação do esporte como um fenômeno global.
 
-Contudo, foi no Brasil que o futsal encontrou solo fértil para florescer. Nas décadas seguintes, o país adaptou e refinou as regras, transformando o esporte em uma paixão nacional. Educadores físicos e entusiastas do futebol abraçaram o futsal, reconhecendo sua capacidade única de desenvolver habilidades técnicas e táticas em espaços limitados.
-
-O surgimento do futsal foi marcado pela criatividade e adaptação contínua. À medida que ganhava popularidade no Brasil, o esporte começou a atravessar fronteiras, conquistando admiradores em todo o mundo. O dinamismo do jogo, os dribles rápidos e a natureza emocionante das partidas contribuíram para sua rápida disseminação em escolas, comunidades e clubes.
-
-Hoje, o futsal é mais do que um esporte; é uma expressão cultural que une pessoas em torno da paixão pelo jogo. Seu surgimento é uma história de inovação e perseverança, destacando como a criatividade de indivíduos pode dar origem a algo que ressoa globalmente. O futsal continua a evoluir, mas sua base sólida e sua trajetória única permanecem como testamentos de sua notável jornada desde as quadras cobertas do Uruguai até os corações de jogadores e fãs em todo o mundo.
+Desde então, o basquete evoluiu, transformando-se em um esporte altamente competitivo e uma paixão compartilhada por milhões ao redor do mundo. O surgimento do basquete não apenas proporcionou uma nova forma de entretenimento, mas também promoveu valores como trabalho em equipe, agilidade e estratégia, tornando-se uma parte essencial da cultura esportiva internacional.
             </p>
         </section>
         <section>
             <h3>Popularização</h3>
             <p>
-                Desde suas origens modestas nas décadas de 1930 e 1940, o futsal tem experimentado uma extraordinária jornada de popularização, tornando-se uma paixão global que transcende culturas e fronteiras. O processo de disseminação desse esporte dinâmico e emocionante é uma história fascinante que reflete a habilidade única do futsal em cativar os corações de milhões ao redor do mundo.
+A popularização do basquete é um fenômeno global que transcende fronteiras e culturas, transformando-se em um esporte de apelo universal. Originário dos Estados Unidos no final do século XIX, o basquete rapidamente conquistou o mundo, tornando-se uma paixão compartilhada por milhões de pessoas.
 
-O fenômeno da popularização do futsal teve início nas quadras cobertas do Uruguai, onde Juan Carlos Ceriani esboçou as primeiras regras do que viria a ser conhecido como futebol de salão. Contudo, foi no Brasil que o futsal encontrou solo fértil para florescer e se transformar em uma paixão nacional. A adaptabilidade do esporte às condições urbanas e a natureza dinâmica do jogo conquistaram os brasileiros, impulsionando sua disseminação nas escolas, clubes e comunidades.
+Um dos principais impulsionadores dessa popularização foi a NBA (National Basketball Association), a liga profissional norte-americana. Com astros como Michael Jordan, Kobe Bryant e LeBron James, a NBA se tornou uma vitrine global para o talento e a excelência atlética, atraindo fãs de todas as partes do planeta.
 
-Ao longo do tempo, o futsal ultrapassou as fronteiras latino-americanas, conquistando admiradores em todos os continentes. Contribuindo para essa expansão está a sua natureza inclusiva, permitindo que pessoas de todas as idades e habilidades participem ativamente. A versatilidade do futsal, jogado em espaços menores e com equipes reduzidas, facilita sua prática em diferentes contextos, desde escolas até cenários profissionais.
+Além disso, eventos como os Jogos Olímpicos contribuíram significativamente para a disseminação do basquete. A inclusão do esporte nas Olimpíadas proporcionou uma plataforma internacional, permitindo que jogadores de diferentes nacionalidades exibissem suas habilidades em um cenário global.
 
-As competições internacionais, como a Copa do Mundo de Futsal da FIFA, desempenharam um papel crucial na promoção do esporte em escala global. Os talentos excepcionais que emergiram desses torneios inspiraram gerações de jogadores e fãs, consolidando ainda mais o futsal como uma expressão única da paixão pelo futebol.
+A ascensão das redes sociais e a facilidade de acesso às transmissões ao vivo também desempenharam um papel crucial na popularização do basquete. Os fãs agora podem acompanhar seus times e jogadores favoritos em tempo real, independentemente de sua localização geográfica.
 
-Hoje, o futsal não é apenas uma modalidade esportiva; é um fenômeno cultural que une comunidades e nações em torno da celebração do talento, da estratégia e da pura emoção do jogo. A popularização do futsal ao longo do tempo é um testemunho da capacidade do esporte em transcender barreiras e se estabelecer como uma força unificadora em todo o mundo. Seja nos pavilhões brasileiros, nas quadras europeias ou em qualquer lugar onde uma bola possa rolar, o futsal continua a encantar e inspirar, deixando seu legado duradouro na história do esporte.
+No contexto escolar, muitas instituições passaram a incluir o basquete em seus programas esportivos, proporcionando às novas gerações a oportunidade de praticar e se apaixonar por esse esporte dinâmico.
+
+Assim, a popularização do basquete não é apenas um fenômeno esportivo, mas também social e cultural, conectando pessoas ao redor do mundo por meio da paixão compartilhada por esse emocionante jogo de bola ao cesto.
         </section>
         <section>
             <h3>Regras Iniciais</h3>
