--- a/index.tml
+++ b/index.tml
@@ -61,13 +61,13 @@ Assim, a popularização do basquete não é apenas um fenômeno esportivo, mas 
         <section>
             <h3>Regras Iniciais</h3>
             <p>
-                O futsal, conhecido inicialmente como futebol de salão, teve suas primeiras regras delineadas na década de 1930, no Uruguai. Juan Carlos Ceriani, considerado o idealizador do esporte, elaborou as diretrizes para uma modalidade que pudesse ser praticada em espaços fechados e com equipes menores.
+                O basquete, um dos esportes mais populares do mundo, teve suas primeiras regras formalizadas em dezembro de 1891 por James Naismith, um professor de educação física canadense. Naismith desenvolveu o jogo como uma atividade indoor para manter seus alunos ativos durante o inverno.
 
-As regras originais do futsal eram uma adaptação do futebol de campo, ajustadas para se adequar às dimensões reduzidas das quadras cobertas. O jogo era caracterizado por sua dinâmica acelerada, exigindo habilidade técnica, agilidade e controle de bola por parte dos jogadores.
+As primeiras regras eram simples e destinavam-se a promover o jogo de maneira equitativa e emocionante. Originalmente, as cestas eram caixas de pêssegos colocadas em extremidades opostas de um ginásio. O objetivo era arremessar uma bola de futebol em uma das cestas para marcar pontos.
 
-Os primeiros regulamentos estabeleceram um formato de jogo de cinco contra cinco jogadores, incluindo o goleiro. Além disso, as partidas eram divididas em dois tempos de 20 minutos cada. Dribles rápidos, passes precisos e jogadas de habilidade eram incentivados, tornando o futsal uma versão emocionante e intensa do futebol tradicional.
+As regras fundamentais incluíam a proibição de correr com a bola, a introdução do conceito de posse alternada após cestas feitas e um método para recomeçar o jogo após uma cesta. Essas regras básicas estabeleceram os alicerces do esporte que se tornaria um fenômeno global.
 
-Com o tempo, as regras foram refinadas e adaptadas para atender às necessidades específicas do futsal, tanto no Uruguai quanto em outros países que adotaram o esporte. Essa evolução constante contribuiu para a consolidação do futsal como uma modalidade única e apaixonante, amplamente praticada em todo o mundo.
+Desde então, o basquete evoluiu consideravelmente em termos de regras e técnicas, mas as bases estabelecidas por Naismith ainda são reconhecidas como a essência do jogo. A simplicidade original das regras destaca a genialidade por trás da criação do basquete e como ele se transformou em uma paixão global ao longo dos anos.
             </p>
         </section>
     </main>
