--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
-  color: black;
-  background-color: darkgrey;
+  color: white;
+  background-color: black;
   font-family: Arial, Helvetica, sans-serif;
 }
 
